--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,10 @@
-/*
-COLORS:
+// Variables //
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+$color-grey-dark: #777;
+$color-white: #fff;
 
 *,
 *::after,
@@ -24,15 +23,15 @@ body {
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
-    color: #777;
+    color: $color-grey-dark;
     padding: 3rem;
     box-sizing: border-box;
 }
 
 .header {
     height: 95vh;
-    background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), 
-    rgba(40, 180, 133, 0.8)), 
+    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), 
+    rgba($color-primary-dark, 0.8)), 
     url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
@@ -59,7 +58,7 @@ body {
 }
 
 .heading-primary {
-    color: #ffffff;
+    color: $color-white;
     text-transform: uppercase;
 
     backface-visibility: hidden;
@@ -150,8 +149,8 @@ body {
 }
 
 .btn--white {
-    background-color: #fff;
-    color: #777;
+    background-color: $color-white;
+    color: $color-grey-dark;
 }
 
 .btn::after {
@@ -168,7 +167,7 @@ body {
 }
 
 .btn--white::after {
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after {
